--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">TopApps</string>
+    <string name="app_name">Top items in App store</string>
+    <string name="free_apps">TOP FREE APPS</string>
+    <string name="paid_apps">TOP PAID APPS</string>
+    <string name="songs">TOP SONGS</string>
 </resources>
